[MWPW-167590, MWPW-167592, MWPW-167299] Text to image Enhancement and bug fixes (#258)
- Layout shift bug fix
- iPhone refresh button click issue
- Increased animation duration
- Opacity fix for the Prompt-bar

Resolves: https://jira.corp.adobe.com/browse/MWPW-167590,
https://jira.corp.adobe.com/browse/MWPW-167592,https://jira.corp.adobe.com/browse/MWPW-167299

**Test URLs:**
- Before:
https://stage--cc--adobecom.hlx.page/drafts/hnv/text2image-test-page?stage&unityversion=v2&martech=off
- After:
https://stage--cc--adobecom.hlx.page/drafts/hnv/text2image-test-page?unitylibs=t2i-v2-mig1&unityversion=v2&martech=off

---------

--- a/unitylibs/core/workflow/workflow-ai/widget.css
+++ b/unitylibs/core/workflow/workflow-ai/widget.css
@@ -41,7 +41,9 @@
   line-height: var(--type-body-xs-lh);
   padding-top: var(--spacing-s);
 }
-/* Screen reader Announcement Dynamic content Updation */
+.unity-enabled .interactive-area .ex-unity-wrap .unity-sprite-container {
+  display: none;
+}
 .aside.unity-enabled .interactive-area .ex-unity-wrap .sr-only {
   position: absolute;
   width: 1px;
@@ -96,19 +98,19 @@
 }
 .unity-enabled .interactive-area .ex-unity-wrap:not(.sticky) .ex-unity-widget {
   padding: 0 var(--spacing-l);
-  animation: slideIn 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+  animation: promptSlideIn 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
   position: relative;
   z-index: 1;
 }
 .unity-enabled .interactive-area .ex-unity-wrap.sticky .ex-unity-widget {
   width: 720px;
-  animation: slideOut 0.5s cubic-bezier(0.34, 1.56, 0.64, 1);
+  animation: promptSlideOut 0.9s cubic-bezier(0.34, 1.56, 0.64, 1);
 }
 .unity-enabled .interactive-area .ex-unity-wrap.sticky.hidden .ex-unity-widget {
   animation: none;
 }
 
-@keyframes slideIn {
+@keyframes promptSlideIn {
   0% {
     transform: translateY(50px);
   }
@@ -116,7 +118,7 @@
     transform: translateY(0);
   }
 }
-@keyframes slideOut {
+@keyframes promptSlideOut {
   0% {
     transform: translateY(150px);
   }
@@ -153,8 +155,8 @@
 .aside.unity-enabled .interactive-area .ex-unity-wrap.sticky.hidden {
   visibility: hidden;
   opacity: 0;
-  transform: translateY(-5px);
-  transition: opacity 0.5s cubic-bezier(0, 0, 1, 1), visibility 0.5s cubic-bezier(0, 0, 1, 1), translate 0.3s cubic-bezier(0, 0, 1, 1);
+  transform: translateY(-3px);
+  transition: opacity 0.1s cubic-bezier(0, 0, 1, 1), visibility 0.5s cubic-bezier(0, 0, 1, 1), translate 0.1s cubic-bezier(0, 0, 1, 1);
 }
 .aside.unity-enabled .interactive-area .ex-unity-wrap.sticky {
   position: fixed;
